--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://sntxDev.github.io/rick-and-morty-React",
+  "homepage": "https://sntxdev.github.io/rick-and-morty-react",
   "dependencies": {
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
